# my-programs

./: .gitignore  LICENSE  crout.c  gausselim.c  graph-span.py  measuregausselim.c  pgm_bayesian_nw.py  testgausselimpivoting.c  tree-walk.py
cacheapp/: .gitignore  Makefile  SDA_ass1_design_doc.md  cacheapp.sln  instructions.md
cacheapp/ConsoleApp1/: MongoDBCacheApp.csproj  Program.cs
cacheapp/ConsoleApp1/queries/: batch.txt  query1.json  query10.json  query2.json  query3.json  query4.json  query5.json  query6.json  query7.json  query8.json  query9.json
cacheapp/MongoDBQueryCache/: BinaryExpression.cs  CacheItem.cs  CachingMongoDbProxy.cs  Heap.cs  IMongoDBProxy.cs  LocalPersistentCache.cs  MongoDBQueryCache.csproj  MongoDBQueryParser.cs  Node.cs  Query.cs  QueryCache.cs  QueryCacheItem.cs  QueryResultCache.cs  QueryResultCacheItem.cs  Tree.cs
cacheapp/TestProject1/: MongoDBQueryRewriterTests.cs  TestProject1.csproj  UnitTest1.cs
cacheapp/data/: cache_app.db
pi-openmp/: CMakeLists.txt
pi-openmp/pi-openmp/: CMakeLists.txt  pi-openmp.cpp  pi-openmp.h
streaming-pipeline/docker/: Dockerfile_pyspark  commands.sh  sparkprog.py
